--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-    min-height: 100vh;
+    height: 100vh;
     overflow: hidden;
 }
 
@@ -15,6 +15,8 @@
 #outlet {
     padding: 2rem;
     flex: 1;
+    height: calc(100vh - 80px);
+    overflow: auto;
 }
 
 #sidebar {
