--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,12 @@
     gap: 1rem;
 }
 
+#content .pagination {
+    position: absolute;
+    bottom: .5rem;
+    right: 1rem;
+}
+
 #sidebar {
     padding-top: 2rem;
 }
@@ -17,6 +23,7 @@
     flex: 1;
     height: calc(100vh - 80px);
     overflow: auto;
+    position: relative;
 }
 
 #sidebar {
